filter_macros/tests/try/err/filter_wrong_form.stderr
error: expected #[filter(table_name = "...")]
 --> tests/try/err/filter_wrong_form.rs:4:1
  |
4 | #[filter = "oops"]
  | ^^^^^^^^^^^^^^^^^^
